<resources>
    <string name="app_name" translatable="false">Color Phone: Call Screen Theme</string>
    <string name="call_theme_pro" translatable="false">Call Theme Pro</string>
    <string name="call_theme">Call Theme</string>
    <string name="customize">Customize</string>
    <string name="my_theme">My Theme</string>
    <string name="title_settings">Settings</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="save_theme">Save Theme</string>
    <string name="call_icon">Call Icon</string>
    <string name="avatar">Avatar</string>
    <string name="view_all">View All</string>
    <string name="background">Background</string>
    <string name="my_design">My Design</string>
    <string name="set_call_theme">Set Call Theme</string>
    <string name="applied">Applied</string>
    <string name="choose_background">Choose background</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="choose_ringtone">Choose Ringtone</string>
    <string name="our_avatar">Our avatar</string>
    <string name="your_avatar">Your avatar</string>
    <string name="your_background">Your background</string>
    <string name="our_background">Our background</string>
    <string name="save_theme_successfully">Save theme successfully</string>
    <string name="change_system_settings">Change system settings</string>
    <string name="to_use_set_ringtone_for_app">To use set ringtone for app</string>
    <string name="turn_on_the_call_screen">Turn On The Call Screen</string>
    <string name="phone_contact_and_storage">Phone, Contact and Storage</string>
    <string name="to_turn_on_phone_calls_contacts">To turn on phone calls contacts</string>
    <string name="turn_on">Turn on</string>
    <string name="settings">Settings</string>
    <string name="unlock_all_screen_theme">Unlock all screen theme</string>
    <string name="remove_all_ads">Remove all ads</string>
    <string name="upgrade_to_premium">Upgrade To Premium</string>
    <string name="language">Language</string>
    <string name="caller_flash">Caller Flash</string>
    <string name="vibrate">Vibrate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="policy">Policy</string>
    <string name="get_started">Get started</string>
    <string name="next">Next</string>
    <string name="share_via">Share via</string>
    <string name="check_out_this_amazing_app">"Check out this amazing app: "</string>
    <string name="we_are_working_hard_for_a_better_user_experience">We are working hard for a better user experience</string>
    <string name="we_d_greatly_appreciate_if_you_rate_us">We\'d greatly appreciate if you rate us</string>
    <string name="to_display_the_call_screen">To display the call screen</string>
    <string name="call_screen">Call Screen</string>
    <string name="the_best_rating_star">The best rating star</string>
    <string name="personalize_your_call_theme">Personalize your call theme</string>
    <string name="term_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="unlock">Unlock</string>
    <string name="easy_to_create_your_own_call">Easy to create your own call</string>
    <string name="flash_effect_on_incoming_call">Flash effect on incoming call</string>
    <string name="system_language">System Language</string>
    <string name="continue_text">Continue</string>
    <string name="start_yearly_with_3_day_free_trial">Start Yearly with 3-day free trial</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="this_action_may_contain_advertising">This action may contain ads</string>
    <string name="start_with_3_day_trial_then">Start with 3-day trial then</string>
    <string name="remove_all_ads_enjoy_the_best_experience">Remove all ads - enjoy the best experience</string>
    <string name="_3_days_free_trial_then">3 days free trial then %1$s</string>
    <string name="discount_off">%1$d%% OFF</string>
    <string name="email_feedback_title">[Android] Feedback Call Theme version: %1$s</string>
    <string name="rate_your_experience">Rate your experience!</string>
    <string name="exit_popup_message">"We love to hear from you. Help us make our app even more awesome"</string>
    <string name="rate_app">Rate app</string>
    <string name="no_exit">"No, exit app"</string>
    <string name="thank_you">Thank you</string>
    <string name="see_you_again">See you again</string>
    <string name="choose_call_icon">Choose call icon</string>
    <string name="loading_ads">Loading Ads…</string>
    <string name="show_on_lock_screen_display_pop_up_windows_while_running_in_the_background">Show on Lock screen\nDisplay pop-up windows while running in the background</string>
    <string name="to_display_an_incoming_call_screen_as_a_popup_on_the_lock_screen">To display an incoming call screen as a popup on the lock screen.</string>
    <string name="ask_grant_permission">Please grant the following permission to theme on call screen</string>
    <string name="notice_grant_permission_dialog">Application need the record permission to work.</string>
    <string name="notice_grant_permission_dialog_2">It seems you permanently declined audio permission. You can go to app settings to grant it</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="try_this_theme">"Try this theme"</string>
    <string name="have_you_ever_tried_this_color_theme">"Have you ever tried this color theme?"</string>
    <string name="enjoy_customize_call_screen">"Let's customize your own call screen now! Enjoy it!"</string>
    <string name="please_grant_permission">"Please grant permission so we can help you."</string>
    <string name="without_permission">"Without permissions, these great call themes will not be able to be installed on your phone."</string>
    <string name="preview">"Preview"</string>
    <string name="popup_premium_title">Start %s with %s-day free trial</string>
    <string name="popup_premium_free_trial_des">%s days free trial then %s</string>
    <string name="start_with">Start %s with</string>
    <string name="then_pay">Then %s</string>
</resources>