<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/call_background"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@drawable/three_day_free_trial"
            android:scaleType="center" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="18dp"
        android:paddingVertical="24dp">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:background="@drawable/icon_close_large"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/startYearly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12dp"
                tools:text="@string/start_yearly_with_3_day_free_trial"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/remove_all_ads"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/cancel_anytime"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/space_12dp"
                android:background="@drawable/bg_whilte_filled_button"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                app:layout_constraintWidth_percent="0.9" />

            <TextView
                android:id="@+id/threeDaysFreeTrialTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/_3_days_free_trial_then"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>