<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/call_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/premium" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="38dp"
            android:background="@drawable/icon_close_large"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_20dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/removeAllAdsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginEnd="@dimen/space_8dp"
                android:lineHeight="32sp"
                android:text="@string/call_theme_pro"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/goProButton"
                android:layout_width="@dimen/ic_size_32dp"
                android:layout_height="@dimen/ic_size_32dp"
                android:background="@drawable/icon_diamond_pro" />
        </LinearLayout>

        <TextView
            android:id="@+id/removeAllAdsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_20dp"
            android:gravity="center"
            android:text="@string/remove_all_ads_enjoy_the_best_experience"
            android:textColor="@color/neutral_900"
            app:layout_constraintBottom_toTopOf="@id/subscriptionRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subscriptionRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            app:layout_constraintBottom_toTopOf="@+id/unlockButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/unlockButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_20dp"
            android:background="@drawable/set_call_theme_btn_bg"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/unlock"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cancelAnytimeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelAnytimeButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/cancel_anytime"
            android:textAllCaps="false"
            android:textColor="@color/neutral_700"
            app:layout_constraintBottom_toTopOf="@+id/policyLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/policyLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/termOfServiceButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/term_of_service"
                android:textAllCaps="false"
                android:textColor="@color/neutral_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="@dimen/space_16"
                android:background="@color/neutral_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/privacyPolicyButton"
                app:layout_constraintStart_toEndOf="@+id/termOfServiceButton"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/privacyPolicyButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textColor="@color/neutral_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>


